--- a/graphicN/reviews/templates/reviews/base.html
+++ b/graphicN/reviews/templates/reviews/base.html
@@ -11,7 +11,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{% url 'reviews:comic_list' %}">Comic list</a></li>
+                <li><a href="{% url 'reviews:comic_list' %}">Comics List</a></li>
                 <li><a href="{% url 'reviews:review_list' %}">Home</a></li>
             </ul>
         </div>
