--- a/graphicN/reviews/templates/reviews/review_list.html
+++ b/graphicN/reviews/templates/reviews/review_list.html
@@ -1,7 +1,7 @@
 {% extends 'reviews/base.html' %}
 
 {% block title %}
-<h2>Latest reviews</h2>
+<h2>Latest Reviews</h2>
 {% endblock %}
 
 {% block content %}
