--- a/graphicN/reviews/templates/reviews/review_detail.html
+++ b/graphicN/reviews/templates/reviews/review_detail.html
@@ -1,4 +1,4 @@
-{% extends 'reviews/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}
 <h2><a href="{% url 'reviews:comic_detail' review.comic.id %}">{{ review.comic.name }}</a></h2>
